# ChangeLog for media-plugins/mythweather
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythweather/ChangeLog,v 1.16 2004/08/07 23:23:39 slarti Exp $

  08 Aug 2004; Tom Martin <slarti@gentoo.org> mythweather-0.13.ebuild,
  mythweather-0.14.ebuild, mythweather-0.15.ebuild:
  Typo in DESCRIPTION: forcast -> forecast. Bug 59717.

*mythweather-0.15 (01 Jun 2004)

  01 Jun 2004; Daniel Ahlberg <aliz@gentoo.org> mythweather-0.11.ebuild,
  mythweather-0.12.ebuild, mythweather-0.15.ebuild:
  Version bump and cleanups.

  20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  mythweather-0.11.ebuild, mythweather-0.12.ebuild, mythweather-0.13.ebuild,
  mythweather-0.14.ebuild:
  Added IUSE.

*mythweather-0.14 (03 Feb 2004)

  03 Feb 2004; Daniel Ahlberg <aliz@gentoo.org> mythweather-0.14.ebuild:
  Version bump

  15 Jan 2004; Max Kalika <max@gentoo.org> mythweather-0.13.ebuild:
  Bump to stable x86.

*mythweather-0.13 (11 Dec 2003)

  11 Dec 2003; Daniel Ahlberg <aliz@gentoo.org> mythweather-0.13.ebuild:
  Version bump.

  08 Dec 2003; <max@gentoo.org> mythweather-0.10.ebuild:
  Remove stale version.

  28 Oct 2003; Max Kalika <max@gentoo.org> mythweather-0.12.ebuild:
  Extend CPU detection.

*mythweather-0.12 (19 Oct 2003)

  19 Oct 2003; Max Kalika <max@gentoo.org> mythweather-0.12.ebuild:
  Bump to version 0.12.

  16 Sep 2003; Max Kalika <max@gentoo.org> mythweather-0.10.ebuild,
  mythweather-0.11.ebuild:
  Bump to stable.

*mythweather-0.11 (18 Aug 2003)

  18 Aug 2003; Max Kalika <max@gentoo.org> mythweather-0.11.ebuild:
  Bump version to 0.11. Change make install to einstall.

  07 Aug 2003; Max Kalika <max@gentoo.org> mythweather-0.10.ebuild:
  Depend on either mythtv or mythfrontend.

  03 Jul 2003; Max Kalika <max@gentoo.org> mythweather-0.8.ebuild:
  Set KEYWORDS to ~x86.

*mythweather-0.10 (01 Jul 2003)

  01 Jul 2003; Max Kalika <max@gentoo.org> mythweather-0.10.ebuild: