@@ -1,8 +1,10 @@
 MD5 dee38b0bca68f33be5f2e3d19d74b3e2 mythweather-0.14.ebuild 997
+MD5 c21827354c3de9fb6d6b3062c0460b5b mythweather-0.16.ebuild 556
 MD5 0b8fe25eba8010822d3422d17b63ef4e mythweather-0.13.ebuild 983
 MD5 a5aca28eff5cc6e7491c3a80d359e76b mythweather-0.15.ebuild 999
-MD5 0371a4866ab4bbbdc7d4409a602ed5a6 ChangeLog 2635
+MD5 f9642c5f59f4fe85426fe589236db548 ChangeLog 2756
 MD5 20e2255501865de5b568424821abf69d metadata.xml 161
 MD5 ea775d05013e97dd4c419804de2ed3b6 files/digest-mythweather-0.13 69
 MD5 1ab52ed2da7b97e38a6f31621371a400 files/digest-mythweather-0.14 69
 MD5 acf4a287fc12a8d0a64dc92ac04c4522 files/digest-mythweather-0.15 69
+MD5 282988e8e7273758479d38c84587cab5 files/digest-mythweather-0.16 69
